--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <div class ="product-image">
+      <img src="./src/assets/images/socks_green.jpeg">
+    </div>
   </body>
 </html>
